--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -46,30 +46,32 @@
                     }
                 },
                 {
-                    "className": "org.joget.apps.form.lib.FileUpload",
+                    "className": "org.joget.apps.form.lib.DatePicker",
                     "properties": {
-                        "resizeMethod": "",
-                        "permissionType": "",
-                        "maxSizeMsg": "File size limit exceeded",
-                        "removeFile": "false",
-                        "readonly": "False",
-                        "attachment": "true",
-                        "fileTypeMsg": "Invalid file type",
-                        "multiple": "False",
-                        "label": "File Upload",
-                        "id": "field2",
-                        "resizeQuality": "0.8"
-                    }
-                },
-                {
-                    "className": "org.joget.plugin.enterprise.MultiSelectBox",
-                    "properties": {
-                        "readonly": "false",
-                        "multiple": "true",
-                        "width": "40%",
-                        "label": "Multi Select Box",
-                        "id": "field3",
-                        "readonlyLabel": "false"
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "startDateFieldId": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a start date!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "format": "",
+                        "label": "Start Date",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "endDateFieldId": "",
+                        "readonly": "",
+                        "allowManual": "",
+                        "workflowVariable": "",
+                        "id": "startDate",
+                        "placeholder": "",
+                        "disableWeekends": "",
+                        "value": "",
+                        "readonlyLabel": ""
                     }
                 }
             ],
