--- a/forms/adminReportConfigForm.json
+++ b/forms/adminReportConfigForm.json
@@ -46,15 +46,32 @@
                     }
                 },
                 {
-                    "className": "org.joget.apps.form.lib.TextField",
+                    "className": "org.joget.apps.form.lib.DatePicker",
                     "properties": {
-                        "encryption": "false",
-                        "readonly": "False",
-                        "style": "",
-                        "label": "Text Field",
-                        "id": "field2",
-                        "readonlyLabel": "False",
-                        "storeNumeric": "False"
+                        "yearRange": "c-10:c+10",
+                        "dataFormat": "yyyy-MM-dd",
+                        "startDateFieldId": "",
+                        "validator": {
+                            "className": "org.joget.apps.form.lib.DefaultValidator",
+                            "properties": {
+                                "type": "",
+                                "message": "Please select a start date!",
+                                "mandatory": "true"
+                            }
+                        },
+                        "format": "",
+                        "label": "Start Date",
+                        "datePickerType": "",
+                        "currentDateAs": "",
+                        "endDateFieldId": "",
+                        "readonly": "",
+                        "allowManual": "",
+                        "workflowVariable": "",
+                        "id": "startDate",
+                        "placeholder": "",
+                        "disableWeekends": "",
+                        "value": "",
+                        "readonlyLabel": ""
                     }
                 }
             ],
