--- a/forms/adminEmailConfigForm.json
+++ b/forms/adminEmailConfigForm.json
@@ -143,7 +143,7 @@
             "className": "org.joget.apps.form.lib.WorkflowFormBinder",
             "properties": {}
         },
-        "name": "Admin Email Config Form OLD",
+        "name": "OLD Admin Email Config Form",
         "description": "",
         "postProcessorRunOn": "create",
         "permission": {
