--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -90,11 +90,11 @@
                 "className": "",
                 "properties": {}
             },
-            "label": "Booking Time",
+            "label": "facilities_book.timeSlot",
             "sortable": "false",
             "datalist_type": "column",
             "exclude_export": "",
-            "name": "facilities_book.time",
+            "name": "facilities_book.timeSlot",
             "width": "",
             "headerAlignment": "",
             "action": {
