--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -3,19 +3,6 @@
         "elements": [{
             "elements": [
                 {
-                    "className": "org.joget.apps.form.lib.HiddenField",
-                    "properties": {
-                        "useDefaultWhenEmpty": "",
-                        "validator": {
-                            "className": "",
-                            "properties": {}
-                        },
-                        "workflowVariable": "",
-                        "id": "field3",
-                        "value": "#variable.status#"
-                    }
-                },
-                {
                     "className": "org.joget.apps.form.lib.SubForm",
                     "properties": {
                         "parentSubFormId": "",
@@ -51,12 +38,12 @@
                             {
                                 "label": "Approve",
                                 "value": "Approve",
-                                "grouping": "status"
+                                "grouping": "#variable.status#"
                             },
                             {
                                 "label": "Reject",
                                 "value": "Reject",
-                                "grouping": "status"
+                                "grouping": "#variable.status#"
                             }
                         ],
                         "validator": {
