--- a/forms/acknowledgeApproved.json
+++ b/forms/acknowledgeApproved.json
@@ -1,42 +1,27 @@
 {
     "elements": [{
         "elements": [{
-            "elements": [
-                {
-                    "className": "org.joget.apps.form.lib.SubForm",
-                    "properties": {
-                        "parentSubFormId": "",
-                        "readonly": "",
-                        "loadBinder": {
-                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-                            "properties": {}
-                        },
-                        "noframe": "",
-                        "formDefId": "bookingApprovalForm",
-                        "subFormParentId": "",
-                        "id": "field1",
-                        "label": "",
-                        "storeBinder": {
-                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-                            "properties": {}
-                        },
-                        "readonlyLabel": ""
-                    }
-                },
-                {
-                    "className": "org.joget.apps.form.lib.HiddenField",
-                    "properties": {
-                        "useDefaultWhenEmpty": "",
-                        "validator": {
-                            "className": "",
-                            "properties": {}
-                        },
-                        "workflowVariable": "#variable.status#",
-                        "id": "field2",
-                        "value": ""
-                    }
+            "elements": [{
+                "className": "org.joget.apps.form.lib.SubForm",
+                "properties": {
+                    "parentSubFormId": "",
+                    "readonly": "",
+                    "loadBinder": {
+                        "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+                        "properties": {}
+                    },
+                    "noframe": "",
+                    "formDefId": "bookingApprovalForm",
+                    "subFormParentId": "",
+                    "id": "field1",
+                    "label": "",
+                    "storeBinder": {
+                        "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+                        "properties": {}
+                    },
+                    "readonlyLabel": ""
                 }
-            ],
+            }],
             "className": "org.joget.apps.form.model.Column",
             "properties": {"width": "100%"}
         }],
