Update form bookingApprovalForm.

--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -44,6 +44,11 @@
                                 "label": "Reject",
                                 "value": "Reject",
                                 "grouping": "status"
+                            },
+                            {
+                                "label": "Pending",
+                                "value": "Pending",
+                                "grouping": "status"
                             }
                         ],
                         "validator": {
